@@ -505,6 +505,13 @@
 #          Default:  false
 #          Example:  SYNC: TRUE
 
+# Environment name:  COB_FILE_LOG
+#   Parameter name:  file_log
+#          Purpose:  Should the ISAM file be logged for later COMMIT/ROLLBACK
+#             Type:  boolean
+#          Default:  false
+#          Example:  file_log=TRUE
+
 # Environment name:  COB_SORT_MEMORY
 #   Parameter name:  sort_memory
 #          Purpose:  Defines how much RAM to assign for sorting data
@@ -722,9 +729,12 @@
 # share_read    Share file for READ only
 # share_no      Share file with NO others
 #  ---- For INDEXED files -----
-# format=ixhandler  INDEXED file format: CISAM,DISAM,VBISAM,BDB,LMDB,OCI,ODBC
+# format=ixhandler  INDEXED file format: CISAM,DISAM,VBISAM,VBCISAM,OCI,ODBC,BDB,LMDB
 # format=auto   INDEXED file format is determined by inspecting the file
 # dups_ahead=   default,never,always
+# file_log=     yes, no 
+#               (OCI & ODBC always log) 
+#               (ISAM depends on configuration and option)
 # nkeys=n       number of indexes
 # key1=(loc:len)     loc (zero relative) of key, len of key
 # key2=(loc:len,loc:len ...)     define composite index
